--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -10,10 +10,11 @@
 }
 
 html {
-    font-size: 62.5%; /* khi đặt thế này thỳ 1.6rem = 16px */
+    font-size: 62.5%;
     line-height: 1.6rem;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 .btn {
